examples/test/testpolicy8938.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8938
  namespace: namespace426
spec:
  podSelector:
    matchLabels:
      key11: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value18
          key38: value22
          key24: value25
      podSelector:
        matchLabels:
          key4: value10
          key19: value49
